# kuliya

./: README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  data_8h.html  data_8h.js  data_8h_source.html  dub.json  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  kuliya_8h.html  kuliya_8h.js  kuliya_8h_source.html  md_README.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  structkuliya__name.html  structkuliya__name.js  structkuliya__schema.html  structkuliya__schema.js  structkuliya__terms.html  structkuliya__terms.js
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_node_request.md  node_update_request.md  task.md  update_node_request.md
.github/workflows/: c-checks.yml  c-gen-docs.yml  c-releases.yml  d-checks.yml  draft-new-release.yml  javascript-checks.yml  labeler.yml  npm-publish.yml  rust-checks.yml  rust-publish.yml
_data/: README.md
_data/ua2aks/: info.json
_data/ua2aks/falaol/dala/: info.json
_data/ua2aks/falaol/dart/: info.json
_data/ua2aks/falaol/dtrl/: info.json
_data/ua2aks/falaol/dts/: info.json
_data/ua2aks/fle/den/: info.json
_data/ua2aks/fle/dfr/: info.json
_data/ua2aks/fle/dsgi/: info.json
_data/ua2aks/fsh/: info.json
_data/ua2aks/fsh/dh/: info.json
_data/ua2aks/fsh/dld/: info.json
_data/ua2aks/fsh/dph/: info.json
_data/ua2aks/fss/: info.json
_data/ua2aks/fss/dedu/: info.json
_data/ua2aks/fss/dpsy/: info.json
_data/ua2aks/fss/dsocio/: info.json
_data/ua2aks/fss/dst/: info.json
_data/ua2aks/ia/: info.json
_data/ua2aks/it/: info.json
_data/ubma/: info.json
_data/ubma/facdr/: info.json
_data/ubma/facdr/pld/: info.json
_data/ubma/facdr/psd/: info.json
_data/ubma/faclschs/: info.json
_data/ubma/faclschs/alld/: info.json
_data/ubma/faclschs/bd/: info.json
_data/ubma/faclschs/eld/: info.json
_data/ubma/faclschs/fld/: info.json
_data/ubma/faclschs/hd/: info.json
_data/ubma/faclschs/hssd/: info.json
_data/ubma/faclschs/icsd/: info.json
_data/ubma/faclschs/ild/: info.json
_data/ubma/faclschs/pd/: info.json
_data/ubma/faclschs/psed/: info.json
_data/ubma/facsc/: info.json
_data/ubma/facsceg/: info.json
_data/ubma/facsci/: info.json
_data/ubma/facscm/: info.json
_data/ubma/facsct/: info.json
_data/umbm/: info.json
_data/umbm/fdsp/: info.json
_data/umbm/fll/: info.json
_data/umbm/fmi/: info.json
_data/umbm/fsci/: info.json
_data/umbm/fsegc/: info.json
_data/umbm/fshs/: info.json
_data/umbm/ftech/: info.json
_data/umbm/istaps/: info.json
_data/umbm/iutm/: info.json
_data/umkb/: info.json
_data/umkb/fdsp/: info.json
_data/umkb/fll/: info.json
_data/umkb/fsecsg/: info.json
_data/umkb/fsesnv/: info.json
_data/umkb/fshs/: info.json
_data/umkb/fst/: info.json
_data/umkb/istaps/: info.json
_data/ummto/: info.json
_data/ummto/dmi/: info.json
_data/ummto/dsat/: info.json
_data/ummto/fdsp/: info.json
_data/ummto/fgc/: info.json
_data/ummto/fgei/: info.json
_data/ummto/fmed/: info.json
_data/ummto/fsbsa/: info.json
_data/ummto/fsecsg/: info.json
_data/ummto/fshs/: info.json
_data/usthb/: info.json
_data/usthb/fchimie/: info.json
_data/usthb/fei/: info.json
_data/usthb/fgc/: info.json
_data/usthb/fgmgp/: info.json
_data/usthb/fmath/: info.json
_data/usthb/fphy/: info.json
_data/usthb/fsb/: info.json
_data/usthb/fstgat/: info.json
_data/usto/: info.json
_data/usto/fag/: info.json
_data/usto/fch/: info.json
_data/usto/fge/: info.json
_data/usto/fgm/: info.json
_data/usto/fmi/: info.json
_data/usto/fph/: info.json
_data/usto/fsnv/: info.json
_data/usto/ieps/: info.json
_data/usto/ista/: info.json
_schemas/: l1.json  l2.json  l3.json
c/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  README.md  build  build.c  conanfile.txt  data.h  kuliya.h
c/example/: main.c  main.cpp
c/helpers/: CMakeLists.txt  file.h  jsmn.h  my_string.c  my_string.h  string.h
c/test/: test.c  test.cpp  test.h
cplusplus/: README.md
csharp/: README.md
d/: .gitignore  README.md  dub.json
d/source/kuliya/: data.d  kuliya.d  package.d
java/: .gitignore  .project  README.md  main.json  pom.xml
javascript/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  README.md  eslint.prettierignore  jest.config.js  package.json  tsconfig.json
javascript/src/: data.ts  index.ts
javascript/src/_config/: pre.js  prepare.ts  types.ts
javascript/src/getNodeByPath/: es6.spec.js  index.ts  ts.spec.ts
php/: README.md  composer.json  index.php
php/config/: README.md
php/docs/: README.md
php/public/: README.md
php/resources/: README.md
php/src/: README.md  SkeletonClass.php  index.html
php/tests/: README.md
python/: README.md  main.py  pyproject.toml
python/src/kulya_python/: __init__.py  data.json  node.py  utils.py
python/src/kulya_python/tests/: test_utils.py
rust/: .gitignore  Cargo.toml  README.md  build.rs  gen_data.rs
rust/src/: error.rs  lib.rs
rust/src/api/: get_node_by_path.rs  mod.rs  storage.rs
rust/src/node/: model.rs
rust/src/schema/: model.rs
rust/src/static/: mod.rs
rust/src/static/_auto_generated/: data.rs  mod.rs
rust/src/static/api/: mod.rs
rust/src/static/node/: mod.rs
rust/src/storage/: mod.rs
rust/src/storage/api/: mod.rs
rust/src/storage/node/: mod.rs
schemas/: univ.json
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  functions_1.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
(+123 files in other folders)
