[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kulya_python"
version = "1.6"
authors = [
  { name="Gorimaaa" },
]
description = "A package to make the python part of the kulya project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dzcode-io/kuliya"
Issues = "https://github.com/dzcode-io/kuliya/issues"

[tool.hatch.build.targets.wheel]
only-include = ["src/kulya_python", "data"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"data" = "kulya_python/src/kulya_python/data.json"

