[package]
name = "kuliya"
version = "0.1.0"
edition = "2021"
build = "gen_data.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"

[build-dependencies]
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.110", features = ["preserve_order"] }
