[package]
name = "kuliya"
version = "0.1.0"
edition = "2021"

[features]
default = ["const", "serde_derive", "storage"]
const = []
serde_derive = ["dep:serde", "dep:serde_json"]
storage = ["serde_derive"]

[dependencies]
serde = { version = "1.0.194", features = ["derive"], optional = true }
serde_json = { version = "1.0.110", optional = true }

[build-dependencies]
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.110", features = ["preserve_order"] }
