[package]
name = "kuliya"
description = "A library for querying Algerian education dataset."
version = "0.1.2"
edition = "2021"
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["static"]
static = []
serde_derive = ["dep:serde", "dep:serde_json"]
storage = ["serde_derive"]

[dependencies]
nest_struct = "0.5"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
